--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
-<h1>Hello world</h1>
+<html>
+    <head>
+        <title>Video Audio Downloader</title>
+        <link rel="stylesheet" type="text/css" href="css/style.css">
+    </head>
+    <body>
+        <div class="top">
+            <h3>Enter a video url below:</h3>
+            <input id="url-input" type="text" placeholder="https://www.youtube.com/..."/>
+        </div>
+        <div class="main-section">
+            <div class="preview">
+                <div class="thumbnail"></div>
+                <p>
+                    <strong>Title</strong><br/>
+                    <em>Artist, year</em>
+                </p>
+            </div>
+            <div>
+                <button class="btn">test</button>
+            </div>
+        </div>
+    </body>
+</html>
