Working video download

--- a/index.html
+++ b/index.html
@@ -11,14 +11,12 @@
         <div class="main-section">
             <div class="preview">
                 <img id="thumbnail"/>
-                <p>
-                    <strong>Title</strong><br/>
-                    <em>Artist, year</em>
+                <p id="video-info">
                 </p>
-                <p id="temp">Hello world!</p>
             </div>
             <div>
-                <button class="btn">Download</button>
+                <button id="download-video" class="btn">Download video</button>
+                <button id="download-audio" class="btn">Download audio</button>
             </div>
         </div>
         <!-- scripts -->
