open file button

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                 <div id="buttons">
                     <button id="download-video" class="btn">Download video</button>
                     <button id="download-audio" class="btn">Download audio</button>
+                    <button id="open-file" class="btn">Open</button>
                 </div>
             </div>
             <div id="downloading">
